tests/out/error/import/non_pkg_files.in.bt
import bait.test_pkgs.non_pkg_files
